--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -49,6 +49,7 @@
      <Compile Include="Assets\Booster\Booster.cs" />
      <Compile Include="Assets\Managers\GUIManager.cs" />
      <Compile Include="Assets\Managers\GameEventManager.cs" />
+     <Compile Include="Assets\Managers\ParticleSystemManager.cs" />
      <Compile Include="Assets\Platform\PlatformManager.cs" />
      <Compile Include="Assets\Runner\Runner.cs" />
      <Compile Include="Assets\Skyline\SkylineManager.cs" />
